--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,3 +37,31 @@ Admin LTE customization
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.flex{
+    align-items:center;
+    justify-content: space-between;
+    flex-direction: row;
+    input, button{
+        margin:15px 0 !important;
+        height:45px
+    }
+    button{
+        float: right;
+        margin-left: 1em !important;
+        min-width: 150px;
+        mat-icon{
+            vertical-align: middle;
+            margin-right:10px
+        }
+    }
+    
+}
+
+h3{
+    padding: 15px 15px 0;
+    margin: 0;
+}
+
+mat-button-toggle-group {
+    margin-left: 12px;
+  }
