--- a/src/app/starter/starter/content/content.component.html
+++ b/src/app/starter/starter/content/content.component.html
@@ -45,7 +45,7 @@
       </div>
       <div class="col">
         <div class="tasktracker">
-          <h3>Task Time Tracker</h3>
+          <h3>Time Tracker</h3>
           <input
             type="text"
             style="padding:8px;margin:15px auto;width:30%;"
@@ -75,7 +75,7 @@
     </div>
     <div class="row dashboard">
       <div class="col">
-        <h3 class="title">Waste Analysis</h3>
+        <h3 class="title">Constraints</h3>
         <div class="pie">
           <div>
             <div class="chart">
