--- a/src/app/starter/starter/nav-bar/nav-bar.component.html
+++ b/src/app/starter/starter/nav-bar/nav-bar.component.html
@@ -10,6 +10,9 @@
     <li class="nav-item d-none d-sm-inline-block">
       <a href="#" class="nav-link">Contact</a>
     </li>
+    <li class="nav-item d-none d-sm-inline-block">
+      <a href="#"  [routerLink]="['/kpi']" class="nav-link">KPIs</a>
+    </li>
   </ul>
 
   <!-- SEARCH FORM -->
