--- a/src/app/starter/starter/main-side-bar/main-side-bar.component.html
+++ b/src/app/starter/starter/main-side-bar/main-side-bar.component.html
@@ -1,9 +1,9 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <!-- Brand Logo -->
   <a href="/" class="brand-link">
-    <!-- <img src="assets/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-      style="opacity: .8"> -->
-    <span class="brand-text font-weight-bold">Lattice</span>
+    <img src="assets/img/logo-lattice.jpg" alt="Lattice Logo" class="brand-image"
+      >
+    <span style="opacity: 0" class="brand-text font-weight-bold">Lattice</span>
   </a>
 
   <!-- Sidebar -->
@@ -91,6 +91,14 @@
               </a>
             </li>
           </ul>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link active" [routerLink]="['/kpi']">
+            <i class="nav-icon fas fa-folder-open"></i>
+            <p>
+              KPIs
+            </p>
+          </a>
         </li>
       </ul>
     </nav>
